# platform-libraries

./: .gitignore  README.md  pyproject.toml
docs/: dev_documenation.md
libs/polyllm/: README.md  pyproject.toml
libs/polyllm/src/polyllm/: __init__.py  client.py  config.py  remote.py  secrets.py
libs/polyllm/src/polyllm/providers/: __init__.py  base.py  bedrock.py  google_genai.py  google_vertexai.py  openai.py  registry.py
libs/polyllm/tests/: test_remote_config_loader.py  test_smoke.py
