[project]
name = "polyllm"
version = "0.1.4"
description = "Config-driven provider-agnostic LLM client (LangChain-backed)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "Platform Team" }]

dependencies = [
  "pydantic>=2.7",
]

[project.optional-dependencies]
langchain = [
  "langchain>=0.2,<0.4",
  "langchain-openai>=0.1,<0.3",
  "langchain-anthropic>=0.1,<0.3",
  "langchain-google-genai>=2.0",
  "langchain-aws>=0.1,<0.3",
]

yaml = ["pyyaml>=6.0"]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polyllm"]